--- a/index.ejs
+++ b/index.ejs
@@ -8,9 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="animate.css" />
-
 </head>
 <body>
 <br>
@@ -52,7 +49,10 @@ function endensub(){
   let h = document.getElementById('endentext').value;
   console.log(h);
  let data = {
-   uri: h
+   uri: h,
+   hell: "yo",
+   gh: "go",
+   php: "php"
     };
 if(h){
 fetch("/en", {
