--- a/index.ejs
+++ b/index.ejs
@@ -82,7 +82,7 @@ alert("Enter Some World!");
     <b>ENDTO  END DECODE</b>
     <br>
     <div style="width: 20rem; height: 2rem;">
-  <input id="enddetext" class="form-control" type="number" style="background: none; border-radius: 10px;" placeholder="End to end decode Number">
+  <input id="enddetext" class="form-control" type="text" style="background: none; border-radius: 10px;" placeholder="End to end decode Number">
     </div><br>
     <a class="btn btn-success" onclick="enddesub();">Output</a>
 <script>
