--- a/index.ejs
+++ b/index.ejs
@@ -14,7 +14,7 @@
 <center><h1><b>ENCODE & DECODE</b></h1>
  <h4>Current mode:</h4>
 <div id="encode">
-    <b>ENCODE</b>
+    <b>ENCODE (beta)</b>
     <br>
     <div style="width: 20rem; height: 2rem;">
   <input id="entext" class="form-control" type="text" style="background: none; border-radius: 10px;" placeholder="Encode Text">
@@ -24,7 +24,7 @@
   
   <div id="decode">
 
-    <b>DECODE</b>
+    <b>DECODE (beta)</b>
 
     <br>
 
