--- a/index.ejs
+++ b/index.ejs
@@ -30,7 +30,7 @@
 
     <div style="width: 20rem; height: 2rem;">
 
-  <input id="dntext" class="form-control" type="number" style="background: none; border-radius: 10px;" placeholder="Decode Number">
+  <input id="dntext" class="form-control" type="text" style="background: none; border-radius: 10px;" placeholder="Decode Number">
 
     </div><br>
 
